<resources>
    <string name="app_name">凯讯</string>
    <string name="doubango_revision">20160706</string>
    <string name="spinner_ipversion">选择IP版本</string>
    <string name="spinner_pcscf_discovery">选择PCSCF发现模式 </string>
    <string name="spinner_transport">选择网络传输格式</string>
    <string name="msg_splash_1">统一通信解决方案</string>
    <string name="msg_splash_2">为您架起沟通的桥梁</string>
    <string name="day_today">今日</string>
    <string name="day_yesterday">昨日</string>
    <string name="copyright" formatted="false">        	阳光凯讯（北京）科技有限公司\n\nwww.sunkaisens.com</string>
    <string name="copyright2" formatted="false">                           凯讯\n\n版本号：</string>
    <string name="string_more">更多</string>
    <string name="string_persondetail">个人资料</string>
    <string name="string_about">关于</string>
    <string name="string_setting">设置</string>
    <string name="string_map">地图</string>
    <string name="string_subscribe_group">订阅群组</string>
    <string name="string_update">系统更新</string>
    <string name="string_exit">退出</string>
    <string name="string_personinfo">个人信息</string>
    <string name="string_mumbersinfo">成员信息</string>
    <string name="string_subscribeinfo">订阅号信息</string>
    <string name="string_mygroup">我的群组</string>
    <string name="string_mysubscribegroup">我的订阅号</string>
    <string name="string_myorg">我的组织</string>
    <string name="string_mybussiness">我的业务</string>
    <string name="string_publicgroup_null">暂无公共台</string>
    <string name="string_myorg_null">暂无组织</string>
    <string name="string_mybussiness_null">暂无业务组</string>
    <string name="string_mypublicgroup">公众号</string>
    <string name="string_orginfo">组织信息</string>
    <string name="string_searchhint">搜索联系人</string>
    <string name="string_recentcall">最近呼叫</string>
    <string name="string_message">短信</string>
    <string name="string_startcall">发起通话</string>
    <string name="string_answer">接听来电</string>
    <string name="string_endcall">结束通话</string>
    <string name="string_speaker_on">扬声器开启</string>
    <string name="string_speaker_off">扬声器关闭</string>
    <string name="string_hold">挂起</string>
    <string name="string_resume">继续</string>
    <string name="string_send_video">发送视频</string>
    <string name="string_stop_video">结束视频</string>
    <string name="string_switch_camera">转换摄像头</string>
    <string name="string_call_terminated">通话已终止</string>
    <string name="string_call_cancelled">通话已取消</string>
    <string name="string_call_group_video_terminated">视频组呼已终止</string>
    <string name="string_call_group_video_cancelled">视频组呼已取消</string>
    <string name="string_call_monitor_video_terminated">视频监控已终止</string>
    <string name="string_call_monitor_video_cancelled">视频监控已取消</string>
    <string name="string_monitor_terminated">监控已终止</string>
    <string name="string_monitor_cancelled">监控已取消</string>
    <string name="string_transmit_terminated">转发已终止</string>
    <string name="string_transmit_cancelled">转发已取消</string>
    <string name="string_busy_here">对方通话中</string>
    <string name="string_incall">正在通话中...</string>
    <string name="string_audio_trying">正在呼叫...</string>
    <string name="string_audio_pickup">邀请你进行语音通话...</string>
    <string name="string_video_pickup">邀请你进行视频通话...</string>
    <string name="string_incall_group_audio">语音组呼</string>
    <string name="string_incall_group_video">视频组呼</string>
    <string name="string_call_incoming">来电呼入</string>
    <string name="string_call_incoming_audio">语音来电呼入</string>
    <string name="string_call_incoming_video">视频来电呼入</string>
    <string name="string_call_incoming_monitor">视频监控呼入</string>
    <string name="string_call_monitor">视频监控</string>
    <string name="string_call_incoming_transmit">视频转发呼入</string>
    <string name="string_call_transmit">视频转发</string>
    <string name="string_Contact_allContactPeople">联系人</string>
    <string name="string_Contact_allContactOrg">组织</string>
    <string name="string_Contact_allContactBus">业务</string>
    <string name="string_Contact_allContactGroup">组呼</string>
    <string name="string_Contact_allContactPublic">公共台</string>
    <string name="string_Contact_allContactSubscribe">订阅号</string>
    <string name="string_Contact_allContactSubscribe_message">订阅号消息</string>
    <string name="conf_advanced_option">高级选项</string>
    <string name="string_call_outgoing_unmonitor">主动视频回传呼叫</string>
    <string name="string_call_unmonitor">主动视频回传</string>
    <string name="string_call_unmonitor_terminated">主动视频回传已终止</string>
    <string name="string_call_unmonitor_cancelled">主动视频回传已取消</string>
    <string name="string_call_incoming_group_audio">语音组呼来电呼入</string>
    <string name="string_call_incoming_group_video">视频组呼来电呼入</string>
    <string name="string_call_outgoing">正在呼叫</string>
    <string name="string_call_outgoing_audio">正在语音呼叫</string>
    <string name="string_call_outgoing_video">正在视频呼叫</string>
    <string name="string_call_outgoing_group_audio">正在语音组呼</string>
    <string name="string_call_outgoing_group_video">正在视频组呼</string>
    <string name="string_call_keybegining">密分开始</string>
    <string name="string_call_keyrequesting">密分请求</string>
    <string name="string_call_keydis">密钥下发</string>
    <string name="string_call_keyresq">密钥接收成功</string>
    <string name="string_groupcall_pttreqest">PTT抢占</string>
    <string name="string_groupcall_pttrelease">PTT释放</string>
    <string name="string_groupcall_pttreqest_success">PTT抢占成功</string>
    <string name="string_groupcall_pttrelease_success">PTT释放成功</string>
    <string name="string_groupcall_pttreject">当前：</string>
    <string name="string_groupcall_subscribed">视频订阅成功</string>
    <string name="string_groupcall_subscribe_failed">视频订阅失败</string>
    <string name="string_chat_picture">传输图片 </string>
    <string name="string_chat_IMaudio">即时语音 </string>
    <string name="string_chat_file">传输文件 </string>
    <string name="string_chat_IMvideo">即时视频 </string>
    <string name="string_chat_IMaudio_down">按住    说话 </string>
    <string name="string_chat_IMaudio_up">松开    结束</string>
    <string name="string_chat_video_start">开始 </string>
    <string name="string_chat_video_stop">停止 </string>
    <string name="string_chat_video_play">播放 </string>
    <string name="string_chat_video_istransfer">发送 </string>
    <string name="string_chat_video_cancel">取消</string>
    <string name="hello">Hello World, TtDemoActivity!</string>
    <string name="login_account">用户</string>
    <string name="login_account_hint">请输入用户名</string>
    <string name="login_password">密码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_button">登录</string>
    <string name="login_adhoc">自组网</string>
    <string name="login_adhocbutton">加入自组网</string>
    <string name="configure_button">配置</string>
    <string name="configure_network">配置网络</string>
    <string name="configure_identity">选择服务器</string>
    <string name="keep_password">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="change_identity">切换账号</string>
    <string name="contact">通信录</string>
    <string name="dialer">拨号</string>
    <string name="setting">设置</string>
    <string name="message">消息</string>
    <string name="more">更多</string>
    <string name="me">我</string>
    <string name="gis">gis</string>
    <string name="quit_tip">再按一次驻留程序</string>
    <string name="send">发送</string>
    <string name="display_name">名称</string>
    <string name="public_identity">公开帐号*</string>
    <string name="private_identity">帐号</string>
    <string name="password">密码</string>
    <string name="general_48">基本设置</string>
    <string name="general_49">通用设置</string>
    <string name="network_48">网络设置</string>
    <string name="lock_48">安全</string>
    <string name="codecs_48">编解码</string>
    <string name="qos_qoe_48">通信质量（QOS）</string>
    <string name="natt_48">网络地址转换服务（NATT）</string>
    <string name="feedback_but">问题反馈</string>
    <string name="feedback_body"></string>
    <string name="feedback_text">请简要描述你的问题</string>
    <string name="feedback_body_text">问题描述</string>
    <string name="feedback_phone_num_body"></string>
    <string name="feedback_phone_num_text">手机号:</string>
    <string name="feedback_commit">提交</string>
    <string name="map_loading">页面加载中，请稍后...</string>
    <string name="tip_net_no_conn_error">网络已断开，请检查网络.</string>
    <string name="tip_net_server_connect_failed">无法连接到服务器，请稍后重试!</string>
    <string name="tip_net_login_failed_check_config">登录失败，请检查服务器配置的正确性！</string>
    <string name="tip_net_login_failed_try_later">登录失败，请稍后重试！</string>
    <string name="tip_net_login_failed_check_name_pass">登录失败，请检查帐户和密码的正确性！</string>
    <string name="tip_net_login_failed_timeout">登陆超时</string>
    <string name="tip_group_no_members">这个群组暂时无成员</string>
    <string name="tip_group_default_group_1">已将</string>
    <string name="tip_group_default_group_2">设置为默认当前集群组！</string>
    <string name="tips">提示</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="change_identy_tip">确定要切换帐号吗?</string>
    <string name="login_forbidden">密码错误</string>
    <string name="login_notexist_user">账号不存在</string>
    <string name="msg_file_image">图片</string>
    <string name="msg_file_video">小视频</string>
    <string name="msg_file_audio">语音</string>
    <string name="msg_file_file">文件</string>
    <string name="call_desc_time">通话时长:</string>
    <string name="call_desc_video">视频通话 </string>
    <string name="call_desc_audio">语音通话 </string>
    <string name="call_desc_message">发短信 </string>
    <string name="call_desc_group_video">视频组呼 </string>
    <string name="call_desc_group_audio">语音组呼 </string>
    <string name="call_desc_video_monitor">视频监控 </string>
    <string name="call_desc_video_Transmint">视频转发</string>
    <string name="call_desc_video_back">视频回传</string>
    <string name="call_desc_unknown">未知 </string>
    <string name="call_desc_incoming">呼入</string>
    <string name="call_desc_outgoing">呼出</string>
    <string name="call_desc_missed_call">未接</string>
    <string name="call_desc_audio_monitor">语音监听</string>
    <string name="string_call_passivemonitor">视频回传</string>
    <string name="call_btn_group_video">视频组呼 </string>
    <string name="call_btn_group_audio">语音组呼 </string>
    <string name="call_btn_group_message">短信群发 </string>
    <string name="call_btn_group_members">成员信息</string>
    <string name="call_btn_group_default_group">设置集群组</string>
    <string name="call_btn_hangup">挂断</string>
    <string name="call_btn_pickup">接听</string>
    <string name="call_btn_refused">拒绝</string>
    <string name="video_fbl">视频分辨率</string>
    <string name="video_fbl_bq">标清</string>
    <string name="video_fbl_lc">流畅</string>
    <string name="self_run">开机自启动</string>
    <string name="full_screen">视频通话全屏模式</string>
    <string name="goback">返回</string>
    <string name="hangup">挂断</string>
    <string name="switchcamera">切换摄像头</string>
    <string name="sunkaisens_version">凯讯 </string>
    <string name="send_msm">发送信息</string>
    <string name="close_up_gps">关闭上报</string>
    <string name="search_address">查询地址</string>
    <string name="map_input_map_address_hint">请输入地名！</string>
    <string name="search">查询</string>
    <string name="detail">详细</string>
    <string name="map_exit">退出</string>
    <string name="open_wifi">开启 WiFi</string>
    <string name="open_ggg">开启 4G/3G/2.5G</string>
    <string name="cscf_host">CSCF代理(Proxy-CSCF)主机</string>
    <string name="cscf_descovery">CSCF代理(Proxy-CSCF)发现</string>
    <string name="open_sigcomp">开启 SigComp</string>
    <string name="cscf_port">CSCF代理(Proxy-CSCF)端口号</string>
    <string name="transfer_yieyi">传输协议</string>
    <string name="local_saver">本地存储器</string>
    <string name="remote_saver">远程存储器 (XDMS)</string>
    <string name="dafault_address">默认网址 (xcap-root)</string>
    <string name="xui">认证名称 (XUI)</string>
    <string name="send_gps_mobile">发送GPS至主机</string>
    <string name="send_gps_port">发送GPS至端口</string>
    <string name="default_name_zs">张三</string>
</resources>