<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_mainbg"
    android:orientation="horizontal" >
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
	    <Button
	        android:id="@+id/btnAudioCall"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/call_desc_audio" />
	
	    <Button
	        android:id="@+id/btnVideoCall"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/call_desc_video" />
	
	    <Button
	        android:id="@+id/btnSendMessage"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/send_msm" />
	
	    <Button
	        android:id="@+id/btnEndReport"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/close_up_gps" />
        
    </LinearLayout>

</RelativeLayout>