<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dip"
    android:layout_gravity="bottom"
    android:visibility="gone" >

    <ImageView
        android:id="@+id/gv_goback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/goback"
        android:src="@drawable/goback" />

    <ImageView
        android:id="@+id/gv_ptt"
        android:layout_width="140dip"
        android:layout_height="140dip"
        android:layout_centerInParent="true"
        android:contentDescription="@string/hangup"
        android:src="@drawable/ptt_up" />

    <ImageView
        android:id="@+id/gv_switch_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/camera"
        android:contentDescription="@string/switchcamera" />

</RelativeLayout>