<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_mainbg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
    	android:layout_margin="8dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/search_address"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etSeekSite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:inputType="textMultiLine"
            android:maxLength="256"
            android:maxLines="5"
            android:padding="5dp"
            android:background="@drawable/shape_border_keyblack0"
            android:hint="@string/map_input_map_address_hint"
            android:ems="10" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
    	android:layout_margin="8dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnSeek"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="@drawable/sel_textbutton_normal"
	        android:layout_weight="1"
            android:text="@string/search"
            android:textColor="@color/color_text2"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnBrowse"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="@drawable/sel_textbutton_normal"
	        android:layout_weight="1"
            android:text="@string/detail"
            android:textColor="@color/color_text2"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="@drawable/sel_textbutton_normal"
	        android:layout_weight="1"
            android:text="@string/map_exit"
            android:textColor="@color/color_text2"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>